peac_dev/force-app/main/default/objects/Payoff__c/Payoff__c.object-meta.xml
<CustomObject>
    <label>Payoff</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Contract Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payoffs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>