peac_dev/force-app/main/default/objects/Payoff__c/fields/External_Payoff_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Payoff_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Payoff ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>