peac_dev/force-app/main/default/objects/Payoff__c/fields/Payee_Name__c.field-meta.xml
<CustomField>
    <fullName>Payee_Name__c</fullName>
    <formula>Payment__r.Payee_Name__c</formula>
    <label>Payee Name</label>
    <type>Text</type>
</CustomField>