peac_dev/force-app/main/default/objects/Payoff__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>Payoffs</relationshipLabel>
    <relationshipName>Payoffs</relationshipName>
    <type>Lookup</type>
</CustomField>