peac_dev/force-app/main/default/objects/Payoff__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <formula>TEXT( Payment__r.Payment_Status__c )</formula>
    <label>Payment Status</label>
    <type>Text</type>
</CustomField>