peac_dev/force-app/main/default/objects/Payoff__c/fields/Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Third_Party__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3rd Party?</label>
    <type>Checkbox</type>
</CustomField>