peac_dev/force-app/main/default/objects/Payoff__c/fields/Third_Party_Payee__c.field-meta.xml
<CustomField>
    <fullName>Third_Party_Payee__c</fullName>
    <description>SAL-4831</description>
    <label>3rd Party Payee</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XBS</fullName>
            </value>
            <value>
                <fullName>XFS</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>