peac_dev/force-app/main/default/objects/Payoff__c/fields/Trade_Up_to_Return__c.field-meta.xml
<CustomField>
    <fullName>Trade_Up_to_Return__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trade Up to Return</label>
    <type>Checkbox</type>
</CustomField>