peac_dev/force-app/main/default/objects/Payoff__c/fields/Upgrade_to_Return_No_Discount__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_to_Return_No_Discount__c</fullName>
    <description>DP-796</description>
    <formula>Opportunity__r.Dealer_Account__r.Upgrade_to_Return_No_Discount__c</formula>
    <label>Upgrade to Return No Discount</label>
    <type>Checkbox</type>
</CustomField>