peac_dev/force-app/main/default/objects/Payoff__c/recordTypes/Loan_Payoff.recordType-meta.xml
<RecordType>
    <fullName>Loan_Payoff</fullName>
    <active>true</active>
    <label>Loan Payoff</label>
</RecordType>