peac_dev/force-app/main/default/objects/Payoff__c/recordTypes/Trade_Up_Contract_Lease.recordType-meta.xml
<RecordType>
    <fullName>Trade_Up_Contract_Lease</fullName>
    <active>true</active>
    <label>Lease Payoff</label>
</RecordType>