peac_dev/force-app/main/default/objects/Payoff__c/validationRules/Require_3rd_Party_Payee.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_3rd_Party_Payee</fullName>
    <active>true</active>
    <description>SAL-4831</description>
    <errorConditionFormula>AND(
RecordType.DeveloperName = &quot;Trade_Up_Contract_Lease&quot;,
Third_Party__c = true, 
ISBLANK(TEXT((Third_Party_Payee__c))
  )
)</errorConditionFormula>
    <errorDisplayField>Third_Party_Payee__c</errorDisplayField>
    <errorMessage>3rd Party Payee is required.</errorMessage>
</ValidationRule>